--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_weight="1">
 
         <ImageView
-            android:layout_width="200dp"
+            android:layout_width="250dp"
             android:layout_height="175dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
@@ -50,6 +50,7 @@
                         android:layout_height="wrap_content"
                         android:hint="пароль"
                         android:padding="10dp"
+                        android:inputType="textPassword"
                         android:layout_marginRight="75dp"
                         android:layout_marginLeft="75dp"
                         android:textStyle="bold"
@@ -80,6 +81,15 @@
 
 
         </LinearLayout>
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true"
+            android:visibility="gone"
+            />
 
     </RelativeLayout>
 
