--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -13,7 +13,7 @@
         android:layout_weight="1">
 
         <ImageView
-            android:layout_width="200dp"
+            android:layout_width="250dp"
             android:layout_height="175dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
@@ -48,12 +48,12 @@
                 android:id="@+id/et_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="пароль"
-                android:padding="10dp"
-                android:layout_marginRight="75dp"
                 android:layout_marginLeft="75dp"
-                android:textStyle="bold"
-                />
+                android:layout_marginRight="75dp"
+                android:hint="пароль"
+                android:inputType="textPassword"
+                android:padding="10dp"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/bt_sign_in"
