--- a/app/src/main/res/layout/activity_adding_photos.xml
+++ b/app/src/main/res/layout/activity_adding_photos.xml
@@ -15,21 +15,38 @@
         android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
 
+
+   <RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content">
+
+
     <ImageView
+        android:layout_centerHorizontal="true"
         android:id="@+id/iv_camera"
-        android:layout_width="190dp"
-        android:layout_height="180dp"
-        android:layout_gravity="center"
+        android:layout_width="210dp"
+        android:layout_height="200dp"
         android:layout_marginTop="25dp"
         android:scaleType="centerCrop"
         android:background="@drawable/camera"/>
+
+       <ProgressBar
+           android:id="@+id/progress_bar"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:layout_centerVertical="true"
+           android:layout_centerHorizontal="true"
+           android:visibility="gone"
+           />
+
+   </RelativeLayout>
 
     <Button
         android:id="@+id/bt_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="50dp"
         android:text="Сохранить"
         android:textStyle="bold"
         android:background="@color/MyReel"
@@ -41,7 +58,7 @@
     <ImageView
         android:layout_width="200dp"
         android:layout_height="150dp"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="7dp"
         android:layout_marginLeft="165dp"
         android:background="@drawable/forcameraactiviry"
         android:layout_gravity="bottom" />
