--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="colorPrimary">#008577</color>
     <color name="AlmostWhite">#EBE6FF</color>
+    <color name="White">#ffffff</color>
     <color name="MyReel">#D4FF69</color>
+    <color name="Black">#000000</color>
 
 </resources>
