adding to database

--- a/app/src/main/res/layout/activity_about_user.xml
+++ b/app/src/main/res/layout/activity_about_user.xml
@@ -39,6 +39,7 @@
          android:textStyle="italic"
             android:layout_marginTop="5dp"        />
        <EditText
+           android:id="@+id/et_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
@@ -68,6 +69,7 @@
         android:layout_marginTop="5dp"
             />
        <EditText
+           android:id="@+id/et_age"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -106,6 +108,7 @@
             android:layout_marginTop="5dp"
             />
           <EditText
+              android:id="@+id/et_about_yourself"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
