--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="White">#ffffff</color>
     <color name="MyReel">#D4FF69</color>
     <color name="Black">#000000</color>
+    <color name="BlackGreen">#0e4000</color>
 
 </resources>
