--- a/app/src/main/res/layout/activity_about_user.xml
+++ b/app/src/main/res/layout/activity_about_user.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".AboutUser"
+    tools:context="regisrtation.AboutUser"
     android:background="@color/White">
 
     <ImageView
