--- a/app/src/main/res/layout/activity_choose_sex.xml
+++ b/app/src/main/res/layout/activity_choose_sex.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChooseSex"
+    tools:context="regisrtation.ChooseSex"
     android:orientation="vertical"
     android:background="@color/White">
 
