Almost killmyself , failure commit

--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -22,12 +22,12 @@
         android:id="@+id/tv_name"
         android:layout_width="140dp"
         android:layout_height="56dp"
-        android:text="hsvvsj"
         android:layout_marginTop="44dp"
         android:layout_marginEnd="36dp"
         android:layout_marginRight="36dp"
         android:textColor="@color/BlackGreen"
-        android:textSize="18sp"
+        android:layout_gravity="center"
+        android:textSize="22sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -39,24 +39,28 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
-        android:text="TextView"
         android:textColor="@color/BlackGreen"
+        android:layout_gravity="center"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_name" />
 
     <TextView
-        android:id="@+id/about"
-        android:layout_width="343dp"
+        android:id="@+id/tv_about"
+        android:layout_width="306dp"
         android:layout_height="197dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="56dp"
         android:layout_marginEnd="52dp"
         android:layout_marginRight="52dp"
-        android:text="TextView"
         android:textColor="@color/BlackGreen"
         android:textSize="18sp"
         android:textStyle="bold"
+        android:layout_gravity="center"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_sex" />
 </android.support.constraint.ConstraintLayout>
