--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -2,23 +2,29 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="menu.Menu"
+    tools:context=".ProfileActivity" 
     >
     <item
-        android:id="@+id/messeger"
+        android:id="@+id/messenger"
         android:orderInCategory="100"
         android:title="Mesagging"
+        app:showAsAction="never"
+        />
+ <item
+        android:id="@+id/profile"
+        android:orderInCategory="100"
+        android:title="Профиль"
         app:showAsAction="never"
         />
 
     <item
         android:id="@+id/search"
         android:orderInCategory="100"
-        android:title="Poisk"
+        android:title="Поиск"
         app:showAsAction="never"/>
 
     <item
-        android:id="@+id/fqvorites"
+        android:id="@+id/favorite"
         android:orderInCategory="100"
         android:title="Favoritiki"
         app:showAsAction="never"/>
